# hardware-requiem

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: full.rs  print.rs
src/: error.rs  lib.rs  main.rs  types.rs
src/hw/: bios.rs  display.rs  gpu.rs  memory.rs  mod.rs  motherboard.rs  os.rs  smbios.rs  storage.rs
src/hw/bios/: mod.rs  parser.rs  tests.rs
src/hw/cpu/: linux.rs  mod.rs  tests.rs  windows.rs
src/hw/display/: README.md  README.ru.md  edid.rs  linux.rs  mod.rs  tests.rs  windows.rs
src/hw/gpu/: mod.rs
src/hw/memory/: linux.rs  mod.rs  parser.rs  tests.rs  windows.rs
src/hw/motherboard/: linux.rs  mod.rs  parser.rs  tests.rs
src/hw/smbios/: linux.rs  mod.rs  tests.rs  windows.rs
src/hw/storage/: linux.rs  mod.rs  tests.rs  windows.rs
src/platform/: mod.rs  unsupported.rs  windows.rs
