[package]
name = "hardware-info"
version = "0.6.0"
edition = "2024"
description = "A Rust library for collecting hardware info."
license = "MIT"
repository = "https://github.com/SoftAndoWeto/hardware-info"
authors = ["Ilya Karasev <iosdsbb@gmail.com>"]
keywords = ["hardware", "cpu", "gpu", "bios", "ram"]

[dependencies]
num_cpus = "1"
nvml-wrapper = "0.10"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }
