[package]
name = "hardware-requiem"
version = "0.9.0"
edition = "2024"
description = "A Rust library for collecting hardware info."
license = "MIT"
repository = "https://github.com/SoftAndoWeto/hardware-requiem"
authors = ["Ilya Karasev <iosdsbb@gmail.com>"]
keywords = ["hardware", "cpu", "gpu", "bios", "ram"]
rust-version = "1.85"
readme = "README.md"
homepage = "https://github.com/SoftAndoWeto/hardware-requiem"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[dependencies]
nvml-wrapper = "0.10"
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }
